0x07-python-test_driven_development/tests/2-matrix_divided.txt

==============================
Test cases for 2-matrix_divided.py
==================================

This module defines a func that divides elements in a matrix

Usage
=====

``matrix_divided(...)``` returns a new list

::

	>>> matrix_divided = __import__('2-matrix_divided').matrix_divided
	>>> matrix = [[1, 2, 3],[4, 5, 6]]
	>>> print(matrix_divided(matrix, 3))
	[[0.33, 0.67, 1.0], [1.33, 1.67, 2.0]]

Function works with floats

::

	>>> matrix = [[1, 2.5, 3], [4, 5.5, 6]]
	>>> print(matrix_divided(matrix, 3))
	[[0.33, 0.83, 1.0], [1.33, 1.83, 2.0]]

Function hanldes non integer input

::

	>>> matrix = [[1, "Hello", 3], [4, 5, 6]]
	>>> print(matrix_divided(matrix, 3))
	Traceback (most recent call last):
      		File "/usr/lib/python3.11/doctest.py", line ..., in __run
       			exec(compile(example.source, filename, "single",
      		File "<doctest 2-matrix_divided.txt[6]>", line ..., in <module>
        		print(matrix_divided(matrix, 3))
              		      ^
        	raise TypeError ("matrix must be a matrix (list of lists) of integers/floats")
    	TypeError: matrix must be a matrix (list of lists) of integers/floats


::

	>>> matrix = "Hello"
	>>> print(matrix_divided(matrix, 3))
	Traceback (most recent call last):
		File "2-matrix_divided.py", line ..., in matrix_divided
        		raise TypeError("matrix must be a matrix (list of lists) of integers/floats")
	TypeError: matrix must be a matrix (list of lists) of integers/floats

::

	>>> matrix = []
	>>> print(matrix_divided(matrix, 3))
	Traceback (most recent call last):
		File "2-matrix_divided.py", line ..., in matrix_divided
			raise TypeError("matrix must be a matrix (list of lists) of integers/floats")
	TypeError: matrix must be a matrix (list of lists) of integers/floats

If div is 0

::

	>>> matrix = [[1,2,3], [4,5,6]]
	>>> print(matrix_divided(matrix, 0))
	Traceback (most recent call last):
	      	File "/usr/lib/python3.11/doctest.py", line ..., in __run
        exec(compile(example.source, filename, "single",
      		File "<doctest 2-matrix_divided.txt[12]>", line ..., in <module>
        	print(matrix_divided(matrix, 0))
                      ^
	ZeroDivisionError: division by zero 
